--- a/index DB.html
+++ b/index DB.html
@@ -9,10 +9,13 @@
     <h1>Gestor de Usuarios</h1>
     <form id="usuarioForm">
         <input type="text" id="nombre" placeholder="Nombre" required>
+        <input type="text" id="apellido" placeholder="Apellido" required>
         <input type="number" id="edad" placeholder="Edad" required>
         <input type="number" id="telefono" placeholder="Telefono" required>
+        <input type="text" id="pais" placeholder="Pais" required>
         <input type="text" id="ciudad" placeholder="Ciudad" required>
         <input type="text" id="direccion" placeholder="Direccion" required>
+         <input type="text" id="postal" placeholder="Postal" required>
         <button type="submit">Agregar Usuario</button>
     </form>
     
